# OpenOyster

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README-en.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  run.sh
.codex-llm/: models.json  pipeline.json
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT_REPORT_KO.md  AUTONOMOUS_DELIBERATION_D1_REQUIREMENTS.md  CODING_DELEGATION_CONTRACT.md  CONNECTORS.md  CONTRIBUTOR_MANUAL.md  DECISION_CONTINUITY_D2_REQUIREMENTS.md  DECISION_OUTCOME_LEDGER_REQUIREMENTS.md  DELIBERATION_FLIP_MONITORING_D3_REQUIREMENTS.md  EVAL_REPORT.md  GOAL_ROADMAP.md  OPENCRAB_PACK_RUNTIME_REQUIREMENTS.md  OPERATIONS.md  POLICY_TUNING.md  RELEASE_CHECKLIST.md  THREAT_MODEL.md  USER_MANUAL.md  USER_MANUAL_KO.md
docs/decisions/: 0001-event-driven-multi-loop-architecture.md
docs/delegation/: 2026-07-16_DECISION_LIFECYCLE_ACCEPTANCE.md  2026-07-16_DELIBERATION_INTEGRITY_ACCEPTANCE.md  D1_FINAL_ACCEPTANCE.md  (+8 more)
examples/: feeds.yaml  mission.charter.yaml  policy.sample.yaml
scripts/: label_goldset.py  package_repo.py  seed_demo.py
tests/: conftest.py  test_api.py  test_charters.py  test_cli_lifecycle.py  test_cli_security.py  test_critic2_claude_cli.py  test_database_fts.py  test_deliberation_cli_api.py  test_deliberation_contracts.py  test_deliberation_gates_adversarial.py  test_deliberation_golden_replay.py  test_deliberation_goldset.py  test_deliberation_migrations.py  test_deliberation_persistence_parity.py  test_deliberation_prompts.py  test_deliberation_runtime.py  test_deliberation_secondary_critic.py  test_deliberation_security.py  test_end_to_end.py  test_events.py  test_extraction_deferred.py  test_flip_confirm.py  test_flip_monitoring.py  test_goldset_cli.py  test_goldset_evaluation.py  test_hypothesis_evidence.py  test_hypothesis_merge.py  test_intake.py  test_knowledge_request_verifiers.py  test_llm.py  test_llm_codex.py  test_opencrab_pack_fixtures.py  test_optimisation.py  test_outcome_ledger.py  test_pack_cli_api.py  test_pack_runtime.py  test_policy_and_connectors.py  test_premise_and_retry.py  test_retrieval.py  test_retrieval_expansion.py  (+2 more)
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
(+240 files in other folders)
