[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "openoyster"
version = "0.3.0"
description = "A durable, self-triggering signal-hypothesis-action intelligence operating system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenOyster Contributors" }]
keywords = ["agents", "intelligence", "autonomous", "signal", "hypothesis", "workflow", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "alembic>=1.13,<2", "beautifulsoup4>=4.12,<5", "fastapi>=0.115,<1",
  "httpx>=0.27,<1", "pydantic>=2.8,<3", "pydantic-settings>=2.4,<3",
  "pypdf>=5,<7", "python-docx>=1.1,<2", "python-dotenv>=1,<2",
  "pyyaml>=6,<7", "rich>=13.7,<15", "sqlalchemy>=2.0.32,<3",
  "typer>=0.12,<1", "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
dev = ["build>=1.2,<2", "mypy>=1.11,<2", "pytest>=8.2,<9", "pytest-cov>=5,<7", "ruff>=0.7,<1", "types-PyYAML>=6.0,<7"]
postgres = ["psycopg[binary]>=3.2,<4"]

[project.scripts]
openoyster = "openoyster.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openoyster"]

[tool.ruff]
line-length = 110
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]
[tool.ruff.lint.per-file-ignores]
"src/openoyster/api/app.py" = ["B008"]
"src/openoyster/migrations/versions/*.py" = ["E501", "UP007", "UP035"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q --cov=openoyster --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error::RuntimeWarning", "error::ResourceWarning"]
